# health

./: .env.example  .gitignore  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  README.md  compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: publish-images.yml
apps/web/: Dockerfile  package.json  svelte.config.js  tsconfig.json
apps/web/src/lib/: WeightChart.svelte
apps/web/src/lib/server/: database.ts  meal-estimator.ts
apps/web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
apps/web/src/routes/api/settings/scale/[address]/: +server.ts
apps/web/src/routes/api/settings/scale/pair/: +server.ts
apps/web/src/routes/api/settings/scale/scan/: +server.ts
apps/web/src/routes/api/visits/: +server.ts
apps/web/src/routes/calories/: +page.server.ts  +page.svelte
apps/web/src/routes/settings/: +page.server.ts  +page.svelte
infra/database/: Dockerfile
infra/database/migrations/: 20260713120000_initial_health_schema.sql  20260713130000_add_scale_display_unit.sql  20260713140000_rename_weight_display_unit.sql  20260714100000_add_page_load_counter.sql  20260714110000_add_calorie_entries.sql  20260714120000_add_discord_weight_notifications.sql  20260714130000_add_active_scale_status.sql  20260714140000_add_ai_configuration.sql
infra/postgres/init/: 001_schema.sql
services/discord-bot/: Dockerfile  package.json  tsconfig.json
services/discord-bot/src/: index.ts
services/scale-collector/: Dockerfile  pyproject.toml
services/scale-collector/src/health_scale_collector/: __init__.py  main.py
(+1 files in other folders)
